[aop] add tests for new aop