@@ -1,22 +1,23 @@
 package com.example.aop;
 
-import com.example.aop.service.Service;
-import org.junit.jupiter.api.Assertions;
+import com.example.aop.service.AccountService;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.fail;
 
 @SpringBootTest
 class MainApplicationTests {
 
-    private Logger logger = LoggerFactory.getLogger(this.getClass());
+    private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     @Autowired
-    private Service service;
+    private AccountService accountService;
 
     @Test
     void contextLoads() {
@@ -25,17 +26,14 @@ class MainApplicationTests {
     @Test
     void testServe() throws InterruptedException {
         logger.info("testServe - before - factor 1");
-        service.serve(1);
+        accountService.serve(1);
         logger.info("testServe - after - factor 1");
-        logger.info("testServe - before - factor 2");
-        service.serve(2);
-        logger.info("testServe - after - factor 2");
     }
 
     @Test
     void testFindAccounts() {
         logger.info("testFindAccounts - before");
-        service.findAccounts(Arrays.asList(1, 2, 3, 4, 5));
+        accountService.findAccounts(List.of(1, 2, 3, 4, 5));
         logger.info("testFindAccounts - after");
     }
 
@@ -43,8 +41,8 @@ class MainApplicationTests {
     void testFindAccountsOrExceptionIfNotFound() {
         logger.info("testFindAccountsOrExceptionIfNotFound - before");
         try {
-            service.findAccountsOrExceptionIfNotFound(Arrays.asList(1, 2, 3, 4, 5));
-            Assertions.fail();
+            accountService.findAccountsOrExceptionIfNotFound(List.of(1, 2, 3, 4, 5));
+            fail();
         } catch (Exception e) {
             logger.error("testFindAccountsOrExceptionIfNotFound - after with exception:", e);
         }
@@ -53,7 +51,7 @@ class MainApplicationTests {
     @Test
     void testAddAccount() {
         logger.info("testAddAccount - before");
-        service.addAccount();
+        accountService.addAccount();
         logger.info("testAddAccount - after");
     }
 
@@ -61,8 +59,8 @@ class MainApplicationTests {
     void testDeleteAccount() {
         logger.info("testDeleteAccount - before");
         try {
-            service.deleteAccount(1);
-            Assertions.fail();
+            accountService.deleteAccount(1);
+            fail();
         } catch (Exception e) {
             logger.error("testDeleteAccount - after with exception:", e);
         }
